--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Yourname's Homepage
-page-top-title: Yourname
+title: Kangzhi Zhao's Homepage
+page-top-title: Kangzhi Zhao
 top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+home-subtitle: Kangzhi Zhao&ensp;|&ensp;赵康志
+copyright-text: '&copy; Kangzhi Zhao 2023-2025. All Rights Reserved.'
